# autojson

./: .gitignore  CMakeLists.txt  Makefile  README.md  install_manifest.txt
examples/: README.md  array.cpp  manipulation_example.cpp  simple_example.cpp
examples/graph_plot/: README.md  Readme.md  graph_plot.h  graph_plot_json_impl.h  input1.json  input2.json  main.cpp
include/: Error.hpp  JSON.hpp  JSON.tpp  JSONJSONImpl.hpp
src/: Error.cpp  JSON.cpp  Parse.cpp  Parse.hpp
src/lib/: Error.cpp  Error.hpp  JSON  JSON.cpp  JSON.hpp  JSON.tpp  Parse.cpp  Parse.hpp  error.cpp  error.hpp  json  json.cpp  json.hpp  json.tpp  parse.cpp  parse.hpp
